--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -4646,6 +4646,10 @@
                         <groupId>junit</groupId>
                         <artifactId>junit</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>org.testcontainers</groupId>
+                        <artifactId>postgresql</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
