--- a/integration-tests/cxf-soap-grouped/pom.xml
+++ b/integration-tests/cxf-soap-grouped/pom.xml
@@ -180,6 +180,10 @@
                                     <wsdlLocation>classpath:wsdl/CalculatorService.wsdl</wsdlLocation>
                                 </wsdlOption>
                                 <wsdlOption>
+                                    <wsdl>${basedir}/target/classes/wsdl/BasicAuthCalculatorService.wsdl</wsdl>
+                                    <wsdlLocation>classpath:wsdl/BasicAuthCalculatorService.wsdl</wsdlLocation>
+                                </wsdlOption>
+                                <wsdlOption>
                                     <wsdl>${basedir}/target/classes/wsdl/HelloService.wsdl</wsdl>
                                     <wsdlLocation>classpath:wsdl/HelloService.wsdl</wsdlLocation>
                                 </wsdlOption>
@@ -511,6 +515,68 @@
         <!--                            <keystore>${project.build.outputDirectory}/bob.jks</keystore>-->
         <!--                        </configuration>-->
         <!--                    </execution>-->
+                            <execution>
+                                <id>generate-server-keypair</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>clean</goal>
+                                    <goal>generateKeyPair</goal>
+                                </goals>
+                                <configuration>
+                                    <alias>localhost</alias>
+                                    <dname>CN=localhost, OU=eng, O=apache.org</dname>
+                                    <exts>
+                                        <ext>bc:c=ca:true,pathlen:2147483647</ext>
+                                        <ext>IssuerAlternativeName=DNS:NOT-FOR-PRODUCTION-USE</ext>
+                                    </exts>
+                                    <keystore>${project.build.outputDirectory}/truststore-server.jks</keystore>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>export-server-certificate</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>exportCertificate</goal>
+                                </goals>
+                                <configuration>
+                                    <alias>localhost</alias>
+                                    <keystore>${project.build.outputDirectory}/truststore-server.jks</keystore>
+                                    <rfc>true</rfc>
+                                    <file>${project.build.outputDirectory}/localhost.pem</file>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>create-client-trusstore</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>clean</goal>
+                                    <goal>importCertificate</goal>
+                                </goals>
+                                <configuration>
+                                    <alias>localhost</alias>
+                                    <trustcacerts>true</trustcacerts>
+                                    <noprompt>true</noprompt>
+                                    <keystore>${project.build.outputDirectory}/truststore-client.jks</keystore>
+                                    <file>${project.build.outputDirectory}/localhost.pem</file>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>generate-wrong-trusstore</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>clean</goal>
+                                    <goal>generateKeyPair</goal>
+                                </goals>
+                                <configuration>
+                                    <alias>localhost</alias>
+                                    <dname>CN=localhost, OU=eng, O=apache.org</dname>
+                                    <exts>
+                                        <ext>bc:c=ca:true,pathlen:2147483647</ext>
+                                        <ext>IssuerAlternativeName=DNS:NOT-FOR-PRODUCTION-USE</ext>
+                                    </exts>
+                                    <keystore>${project.build.outputDirectory}/truststore-wrong.jks</keystore>
+                                </configuration>
+                            </execution>
                         </executions>
                     </plugin>
                 </plugins>
