Upgrade to Optaplanner 9.37.Final Fixes #4463

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -187,7 +187,7 @@
         <module>openapi-java</module>
         <module>openstack</module>
         <module>opentelemetry</module>
-        <!--<module>optaplanner</module> https://github.com/apache/camel-quarkus/issues/4463 -->
+        <module>optaplanner</module>
         <module>paho</module>
         <module>paho-mqtt5</module>
         <module>pdf</module>
