--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -174,7 +174,7 @@
         <module>openapi-java</module>
         <module>openstack</module>
         <module>opentelemetry</module>
-        <!--<module>optaplanner</module>-->
+        <module>optaplanner</module>
         <module>paho</module>
         <module>paho-mqtt5</module>
         <module>pdf</module>
