--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -1962,11 +1962,17 @@
                     </exclusion>
                 </exclusions>
             </dependency>
-            <!--<dependency>
+            <dependency>
                 <groupId>org.apache.camel</groupId>
                 <artifactId>camel-optaplanner</artifactId>
                 <version>${camel.version}</version>
-            </dependency>-->
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.optaplanner</groupId>
+                        <artifactId>optaplanner-core</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
                 <artifactId>camel-paho</artifactId>
@@ -4706,7 +4712,7 @@
                 <artifactId>camel-quarkus-opentelemetry-deployment</artifactId>
                 <version>${camel-quarkus.version}</version>
             </dependency>
-            <!--<dependency>
+            <dependency>
                 <groupId>org.apache.camel.quarkus</groupId>
                 <artifactId>camel-quarkus-optaplanner</artifactId>
                 <version>${camel-quarkus.version}</version>
@@ -4715,7 +4721,7 @@
                 <groupId>org.apache.camel.quarkus</groupId>
                 <artifactId>camel-quarkus-optaplanner-deployment</artifactId>
                 <version>${camel-quarkus.version}</version>
-            </dependency>-->
+            </dependency>
             <dependency>
                 <groupId>org.apache.camel.quarkus</groupId>
                 <artifactId>camel-quarkus-paho</artifactId>
@@ -6508,7 +6514,7 @@
                 <artifactId>mybatis</artifactId>
                 <version>${mybatis.version}</version>
             </dependency>
-            <!--<dependency>
+            <dependency>
                 <groupId>org.optaplanner</groupId>
                 <artifactId>optaplanner-quarkus</artifactId>
                 <version>${optaplanner.version}</version>
@@ -6527,7 +6533,7 @@
                 <groupId>org.optaplanner</groupId>
                 <artifactId>optaplanner-quarkus-jackson-deployment</artifactId>
                 <version>${optaplanner.version}</version>
-            </dependency>-->
+            </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-aop</artifactId>
