--- a/.github/workflows/quarkus-master-cron.yaml
+++ b/.github/workflows/quarkus-master-cron.yaml
@@ -69,6 +69,13 @@ jobs:
             && cd quarkus \
             && echo "Current Quarkus commit:" $(git rev-parse HEAD) \
             && ./mvnw ${CQ_MAVEN_ARGS} clean install -Dquickly
+      - name: Patch mvnw
+        run: |
+          # This can be removed after upgrading to Maven 3.9.2
+          # make sure mvnw is installed
+          ./mvnw -v
+          # upgrade maven-resolver artifacts
+          ./patch-mvnw.sh
       - name: Build Camel Quarkus
         run: |
           ./mvnw ${CQ_MAVEN_ARGS} clean install -Dquarkus.version=999-SNAPSHOT --fail-at-end
@@ -129,11 +136,13 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git fetch origin main
           git rebase $(cat ~/build-data/main-sha.txt)
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'temurin'
-          java-version: '11'
+      - name: Patch mvnw
+        run: |
+          # This can be removed after upgrading to Maven 3.9.2
+          # make sure mvnw is installed
+          ./mvnw -v
+          # upgrade maven-resolver artifacts
+          ./patch-mvnw.sh
       - name: Integration Tests
         run: |
           for MODULE in $(yq -M -N e ".${{ matrix.category }}" tooling/scripts/test-categories.yaml | cut -f2 -d' '); do
