--- a/tooling/test-list/pom.xml
+++ b/tooling/test-list/pom.xml
@@ -56,7 +56,8 @@
                             </includes>
                             <excludes>
                                 <exclude>support/**/*</exclude>
-                                <exclude>master/pom.xml</exclude>
+                                <exclude>support/**/*</exclude>
+                                <exclude>groovy-dsl/pom.xml</exclude><!-- See https://github.com/apache/camel-quarkus/issues/4894 -->
                                 <exclude>master-openshift/pom.xml</exclude>
                                 <exclude>master-file/pom.xml</exclude>
                                 <exclude>main-command-mode/pom.xml</exclude>
