- Bump xalan from version 2.7.2 to version 2.7.3 - Add xalan:serializer dependency since it is missing from xalan's pom

--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -7097,6 +7097,14 @@
                 <artifactId>xalan</artifactId>
                 <version>${xalan.version}</version>
             </dependency>
+
+            <!-- TODO: remove when Xalan has fixed its bom. See https://issues.apache.org/jira/browse/XALANJ-2649 -->
+            <dependency>
+                <groupId>xalan</groupId>
+                <artifactId>serializer</artifactId>
+                <version>${xalan.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>xerces</groupId>
                 <artifactId>xercesImpl</artifactId>
