--- a/extensions-support/xalan/runtime/pom.xml
+++ b/extensions-support/xalan/runtime/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>xalan</artifactId>
         </dependency>
 
+        <!-- TODO: remove when Xalan has fixed its bom. See https://issues.apache.org/jira/browse/XALANJ-2649 -->
+        <dependency>
+            <groupId>xalan</groupId>
+            <artifactId>serializer</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.graalvm.nativeimage</groupId>
             <artifactId>svm</artifactId>
