--- a/integration-test-groups/cxf-soap/cxf-soap-server/src/main/resources/application.properties
+++ b/integration-test-groups/cxf-soap/cxf-soap-server/src/main/resources/application.properties
@@ -18,9 +18,7 @@
 quarkus.cxf.path=/soapservice
 quarkus.native.resources.includes = wsdl/*.wsdl
 
-# disable the root config
-quarkus.cxf.codegen.wsdl2java.includes = none.wsdl
-# ... and do everything with named parameter sets so that it works in the grouped module
+# do everything with named parameter sets so that it works in the grouped module
 quarkus.cxf.codegen.wsdl2java.server.includes = wsdl/HelloService.wsdl
 quarkus.cxf.codegen.wsdl2java.server.additional-params = -wsdlLocation,classpath:wsdl/HelloService.wsdl,-xjc-Xts
 
